# OfficeReadCpp

./: .gitignore  CMakeLists.txt  README.md
cmd/: officeread.cpp
docs/: API.md
include/officeread/: officeread.hpp
src/: internal.hpp  officeread.cpp  ole.cpp  ooxml.cpp  text.cpp
testdata/: README.md
testdata/negative/: clusterfuzz-testcase-minimized-POIHSLFFuzzer-4983252485210112.ppt  clusterfuzz-testcase-minimized-POIHSLFFuzzer-6028723156746240.ppt  clusterfuzz-testcase-minimized-POIHSSFFuzzer-4734163573080064.xls  clusterfuzz-testcase-minimized-POIHWPFFuzzer-5832867957309440.doc  clusterfuzz-testcase-minimized-POIXSLFFuzzer-6071540680032256.pptx  clusterfuzz-testcase-minimized-POIXSLFFuzzer-6372932378820608.pptx  clusterfuzz-testcase-minimized-POIXSLFFuzzer-6435650376957952.pptx  crash-57308ca363f5b71763c489d1b432aff009d4bc4f.pptx  crash-e329fca9087fe21bca4a80c8bc472a661c98d860.xls  rde.imf.ru_sites_default_files_rde_documents_vodootvedenie_2020.xlsb.xls
testdata/reference/: extract_bench_test.go  extract_test.go  legacy_doc_mojibake_test.go  legacy_ppt_duplicates_test.go  legacy_ppt_persist_test.go  legacy_ppt_strict_test.go  office-baseline-report.json  strict_office_content_test.go  strict_office_vml_test.go  xlsx_display_test.go
testdata/samples/: 119877_all type background_save_by_AOO.ppt  1904DateWindowing.xls  3dFormulas.xls  70005-countifs.xlsx  LIBRE_OFFICE-100610-0.pptx  LIBRE_OFFICE-128382-0.xlsx  LIBRE_OFFICE-94379-0.zip-57.xls  SOURCES.md  absolute-anchor-over-empty-sheet.xlsx  bug60848_sumproduct_unary_minus.xlsx  generated-altchunk-html.docx  generated-docx-alt-attributes.docx  generated-docx-customxml.docx  generated-docx-docprops.docx  generated-docx-vml.docx  (+39 more)
tests/: tests.cpp
tools/: differential.ps1
(+4 files in other folders)
